pt-sample-app/customerapp/envoy-customer.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9912
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10012
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              json_format:
                START_TIME: "[%START_TIME%]"
                METHOD: "%REQ(:METHOD)% "
                PATH: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                PROTOCOL: "%PROTOCOL%"
                RESPONSE_CODE: "%RESPONSE_CODE%"
                RESPONSE_FLAGS: "%RESPONSE_FLAGS%"
                BYTES_RECEIVED: "%BYTES_RECEIVED%"
                BYTES_SENT: "%BYTES_SENT%"
                DURATION: "%DURATION%"
                RESPONSE_DURATION: "%RESPONSE_DURATION%"
                RESPONSE_TX_DURATION: "%RESPONSE_TX_DURATION%"
                AUTHORITY: "%REQ(:AUTHORITY)%"
                UPSTREAM_HOST: "%UPSTREAM_HOST%"
                UPSTREAM_CLUSTER: "%UPSTREAM_CLUSTER%"
                UPSTREAM-SERVICE-TIME: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                X-FORWARDED-FOR: "%REQ(X-FORWARDED-FOR)%"
                USER-AGENT: "%REQ(USER-AGENT)%"
                X-REQUEST-ID: "%REQ(X-REQUEST-ID)%"
              path: "/var/log/customer.log"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service_customer
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: customer
          http_filters:
          - name: envoy.router
  clusters:
  - name: customer
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: customer
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 5000
